[package]
name = "sensor-temp-humidity-sht40"
version = "0.4.0"
authors = ["Lucian Carata <luc@rez.how>"]
license = "BSD-3-Clause OR Apache-2.0"
description = "Driver for SHT40 temperature and humidity sensor"
keywords = ["sht40", "sensirion", "embedded-hal-driver"]
categories = ["embedded", "hardware-support", "no-std"]
repository = "https://github.com/lc525/sensor-temp-humidity-sht40-rs"
edition = "2021"

[features]
# enable floating-point measurement datatypes
fp = [] 

[dependencies]
sensirion-i2c = { git="https://github.com/rhomber/sensirion-i2c-rs.git", branch="master" }
embedded-hal = { version = "1.0.0" }

[dev-dependencies]
embedded-hal-mock = { version = "0.10.0" }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
lto = true
opt-level = 3
debug = false
